# Data-analysis-using-Datasus

./: README.md
dados_panda/: .gitignore  README.md  pyproject.toml
dados_panda/src/: __init__.py  clear.py  estatisc_basic.py
src/: estatisc_basic.py
