[project]
name = "dados-panda"
version = "0.1.0"
description = ""
authors = [
    {name = "brunonativaa",email = "brunoferreirarodrigues26@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]

[tool.poetry]
packages = [{include = "dados_panda", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
